examples/fabgen/src/bindings.rs

/* automatically generated by rust-bindgen 0.64.0 */

pub use self::root::*;

#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod root {
    #[allow(unused_imports)]
    use self::super::root;
    pub const OwnershipPolicy_NonOwning: root::OwnershipPolicy = 0;
    pub const OwnershipPolicy_Copy: root::OwnershipPolicy = 1;
    pub const OwnershipPolicy_Owning: root::OwnershipPolicy = 2;
    pub type OwnershipPolicy = ::std::os::raw::c_int;
    pub type matplot_line_handle = *mut ::std::os::raw::c_void;
    pub type matplot_vector_1d = *mut ::std::os::raw::c_void;
    pub type matplot_figure_handle = *mut ::std::os::raw::c_void;
    extern "C" {
        pub fn matplot_line_handle_free(arg1: root::matplot_line_handle);
    }
    extern "C" {
        pub fn matplot_vector_1d_free(arg1: root::matplot_vector_1d);
    }
    extern "C" {
        pub fn matplot_figure_handle_free(arg1: root::matplot_figure_handle);
    }
    extern "C" {
        pub fn matplot_plot(
            x: root::matplot_vector_1d,
            y: root::matplot_vector_1d,
        ) -> root::matplot_line_handle;
    }
    extern "C" {
        pub fn matplot_show(f: root::matplot_figure_handle);
    }
}
